gcc/testsuite/rust/rustc/ui/parser/issues/issue-101477-enum_dg.rs
//@ run-rustfix

#[allow(dead_code)]
enum Demo {
    A = 1,
    B == 2 // { dg-error "" "" { target *-*-* } }
// { dg-error "" "" { target *-*-* } .-1 }
}

fn main() {}

